tests/parse_print/issues/133_2/stderr.expected
Error:
    tests/parse_print/issues/133_2/133_2.essence:6:6:
unexpected int
expecting ), comma, or operator
         int(1,3)
         ^